zabbix/web/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zabbix
  name: web
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: web
